# _DistributedSystems

./: .gitignore  ACKNOWLEDGMENTS.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: ci.yml  release.yml
bloom-filters/: CHANGELOG.md  README.md  pyproject.toml
bloom-filters/examples/: demo.py
bloom-filters/src/: __init__.py  bloom_filter.py
bloom-filters/tests/: test_bloom_filter.py
byzantine-consensus/: CHANGELOG.md  README.md  pyproject.toml
byzantine-consensus/examples/: quick_start.py
byzantine-consensus/src/: __init__.py
byzantine-consensus/src/pbft/: __init__.py  messages.py  network.py  node.py
byzantine-consensus/tests/: test_pbft.py
clock-skew-simulator/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
clock-skew-simulator/examples/: clock_drift_demo.py  distributed_database.py  event_ordering.py
clock-skew-simulator/simulations/: clock_synchronization.py  concurrent_events.py  network_partition.py
clock-skew-simulator/src/: __init__.py  causality.py  hybrid_clock.py  lamport_clock.py  ntp_simulator.py  physical_clock.py  vector_clock.py  visualizer.py
clock-skew-simulator/tests/: test_clock_skew.py  test_new_modules.py
consistent-hashing/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
consistent-hashing/src/: __init__.py  consistent_hash.py
consistent-hashing/tests/: test_consistent_hash.py
crdt/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
crdt/src/: __init__.py  causal_context.py  crdt_base.py  g_counter.py  g_set.py  lww_map.py  lww_register.py  or_set.py  pn_counter.py  two_phase_set.py
crdt/tests/: test_causal.py  test_crdt.py  test_maps_registers.py  test_sets.py
distributed-locks/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
distributed-locks/examples/: critical_section.py  leader_protected.py  transaction_lock.py
distributed-locks/src/: __init__.py  deadlock_detector.py  distributed_lock.py  fencing_tokens.py  lease_lock.py  redlock.py
distributed-locks/tests/: test_distributed_locks.py
distributed-tracing/: CHANGELOG.md  README.md  pyproject.toml
distributed-tracing/src/tracing/: __init__.py  span.py  tracer.py  visualization.py
distributed-tracing/tests/: test_tracing.py
distributed-transactions/: CHANGELOG.md  README.md  pyproject.toml
distributed-transactions/src/: __init__.py  two_phase_commit.py
distributed-transactions/tests/: test_two_phase_commit.py
eventual-consistency-patterns/: CHANGELOG.md  README.md  pyproject.toml
eventual-consistency-patterns/eventual_consistency/: __init__.py  anti_entropy.py  causal.py  conflict_resolution.py  models.py  read_repair.py
eventual-consistency-patterns/examples/: simple_usage.py
eventual-consistency-patterns/tests/: test_all.py
gossip-protocol/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
gossip-protocol/examples/: distributed_cache.py
gossip-protocol/src/: __init__.py  config.py  failure_detector.py  gossip_node.py  membership.py  message.py  state_store.py  transport.py
gossip-protocol/tests/: test_gossip_protocol.py
leader-election/: CHANGELOG.md  README.md  pyproject.toml
leader-election/examples/: master_worker.py
leader-election/src/: __init__.py  bully_algorithm.py  config.py  election_manager.py  fencing.py  lease_algorithm.py  local_transport.py  ring_algorithm.py  transport.py
leader-election/tests/: test_election.py
merkle-trees/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
merkle-trees/src/: __init__.py  merkle_tree.py
merkle-trees/tests/: test_merkle_tree.py
network-partition-tester/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
network-partition-tester/examples/: healing_test.py  partition_tolerance.py  split_brain_test.py
network-partition-tester/src/: __init__.py  assertions.py  failure_scenarios.py  latency_injector.py  network_proxy.py  packet_dropper.py  partition_coordinator.py  recorder.py
network-partition-tester/tests/: test_network_partition.py
quorum-systems/: CHANGELOG.md  README.md  pyproject.toml
quorum-systems/examples/: basic_usage.py
quorum-systems/src/: __init__.py  quorum_system.py
quorum-systems/tests/: test_quorum.py
raft-from-scratch/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
raft-from-scratch/examples/: distributed_counter.py  kv_store.py
raft-from-scratch/src/: __init__.py  config.py  log.py  raft_node.py  rpc.py  state_machine.py  storage.py
raft-from-scratch/tests/: test_raft_node.py
rate-limiting/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
rate-limiting/examples/: basic_usage.py
rate-limiting/src/: __init__.py  distributed_limiter.py  rate_limiter.py
rate-limiting/tests/: test_distributed_limiter.py  test_rate_limiter.py
service-discovery/: CHANGELOG.md  README.md  pyproject.toml
service-discovery/examples/: basic_usage.py
service-discovery/src/: __init__.py  service_registry.py
service-discovery/tests/: test_service_registry.py
vector-clocks-advanced/: CHANGELOG.md  README.md  pyproject.toml
vector-clocks-advanced/src/: __init__.py  vector_clock_advanced.py
vector-clocks-advanced/tests/: test_advanced_scenarios.py  test_vector_clock.py
