[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byzantine-consensus"
version = "1.0.0"
description = "Byzantine fault-tolerant consensus protocols for adversarial environments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"byzantine_consensus" = "src"}
packages = ["byzantine_consensus", "byzantine_consensus.pbft"]
