[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consistent-hashing"
version = "1.0.0"
description = "Production-grade consistent hashing implementation for distributed data partitioning and load balancing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"consistent_hashing" = "src"}
packages = ["consistent_hashing"]
