[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crdt"
version = "1.0.0"
description = "Production implementations of CRDTs for building eventually consistent distributed systems without coordination."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"crdt" = "src"}
packages = ["crdt"]
