[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-locks"
version = "1.0.0"
description = "Production-grade distributed locking mechanisms for coordinating access to shared resources across distributed systems."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"distributed_locks" = "src"}
packages = ["distributed_locks"]
