[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-tracing"
version = "1.0.0"
description = "Request tracing and observability for distributed systems."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"distributed_tracing" = "src/tracing"}
packages = ["distributed_tracing"]
