[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leader-election"
version = "1.0.0"
description = "Production-ready leader election algorithms for distributed coordination and preventing split-brain scenarios."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"leader_election" = "src"}
packages = ["leader_election"]
