[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merkle-trees"
version = "1.0.0"
description = "Cryptographic hash trees for efficient data synchronization, verification, and anti-entropy in distributed systems."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"merkle_trees" = "src"}
packages = ["merkle_trees"]
