[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-partition-tester"
version = "0.1.0"
description = "A toolkit for simulating network partitions and failures in distributed systems."
readme = "README.md"
authors = [
  { name = "Gemini", email = "gemini@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]
yaml = ["pyyaml"]

[tool.setuptools.packages.find]
where = ["src"]
