[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-partition-tester"
version = "1.0.0"
description = "A toolkit for simulating network partitions and failures in distributed systems."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"network_partition_tester" = "src"}
packages = ["network_partition_tester"]
