[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-limiting"
version = "1.0.0"
description = "Distributed rate limiting algorithms for API throttling and traffic control."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["redis>=4.0.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"rate_limiting" = "src"}
packages = ["rate_limiting"]
