[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-discovery"
version = "1.0.0"
description = "Dynamic service registration, discovery, and health checking for microservices architectures."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"service_discovery" = "src"}
packages = ["service_discovery"]
